--- a/templates/_base.html
+++ b/templates/_base.html
@@ -164,6 +164,7 @@
 	{{ JS.push('js/lib/underscore.js') }}
     {{ JS.push('js/lib/moment.js') }}
     {{ JS.push('js/lib/bootstrap.js') }}
+    {{ JS.push('js/lib/jquery.cookie.js') }}
     {% block extra_foot_js %}{% endblock extra_foot_js %}
     {{ JS.push('js/templates.js') }}
     {{ JS.push('js/app.js') }}
